# redoxa

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/DISCUSSION_TEMPLATE/: 01_research_question.yml  02_showcase.yml  03_idea_brainstorm.yml
.github/workflows/: build-check.yml  demo-validation.yml  research-integrity.yml
docs/: README.md  architecture.md  artifice.md  community-guidelines.md  fusion.md  glossary.md  llm-task-discovery.md  math.md  planner.md  ql-metric.md  technical-overview.md
docs/crash/: 00-welcome.md  01-patterns-and-symmetry.md  02-simple-operations.md  03-feedback-loops.md  04-self-organization.md  05-learning-systems.md  06-living-mathematics.md  07-the-unified-field.md  08-reality-as-mathematics.md  09-the-deep-questions.md  10-the-living-universe.md  Crash.md  README.md
src/core/: Cargo.toml  arm.rs  artifact_model.rs  certificate.rs  heapstore.rs  lib.rs  planner.rs  python_bindings.py  score.rs  stackdag.rs  wasmhost.rs
src/demos/: artifact_training_demo.py  audio_caption_loop.py  ce1_barycenter.py  ce1_certificate_cache.py  ce1_chess_algebra.py  ce1_critical_line_operator.py  ce1_final_demo.py  ce1_integrated_demo.py  ce1_kernel_atlas.py  ce1_passport.py  ce1_planner_shim.py  ce1_quick_demo.py  ce1_seed_metric.py  chess_gray8.py  demo_outputs.md  network_lattice_demo.py  pi_gauge_algorithm.py  quantum_lattice_demo.py  report.md  seed_metric_demo.py  witness_system.py
src/kernels/hilbert_lift/: Cargo.toml
src/kernels/mantissa_quant/: Cargo.toml
src/orchestrator/: vm.py
src/orchestrator/redoxa/: __init__.py  backbone_harmonizer.py  (+10 more)
src/scripts/: build_trainer.py  ce1_fusion_demo.py  jit.py  run.py  rustc_trainer_wrapper.py  test_learning.py
(+3 files in other folders)
